# core

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  issue_template.md  revision_data.h.in.cmake
cmake/: options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindMySQL.cmake  FindPCHSupport.cmake
cmake/platform/unix/: settings.cmake
contrib/: check_updates.sh
dep/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/g3dlite/source/: license.cpp
dep/threads/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
doc/: install_linux.md  install_win.md
sql/base/: auth_database.sql  characters_database.sql  logs_database.sql
sql/base/dev/: world_database.sql
sql/updates/auth/: 2019_12_08_00_auth.sql  2019_12_13_00_auth.sql  2020_01_04_00_auth.sql
sql/updates/characters/: 2019_12_08_00_characters.sql  2019_12_12_00_characters.sql  2019_12_13_00_characters.sql  2020_01_04_00_characters.sql
sql/updates/logs/: 2020_01_04_00_logs.sql
sql/updates/world/: 2019_12_13_03_world.sql  2019_12_13_04_world.sql  2019_12_14_00_world.sql  2019_12_15_00_world.sql  2019_12_21_00_world.sql  2019_12_31_00_world.sql  2020_01_04_00_world.sql  2020_01_04_01_world.sql  2020_01_05_00_world.sql  2020_01_07_00_world.sql  2020_01_07_02_world.sql  2020_01_08_00_world.sql  2020_01_09_00_world.sql  2020_01_09_01_world.sql  2020_01_09_02_world.sql  2020_01_09_03_world.sql  2020_01_09_04_world.sql  2020_01_09_05_world.sql  2020_01_10_06_world.sql  world_2019_01_31_10.sql
src/: CMakeLists.txt
src/common/: Banner.cpp  CMakeLists.txt  Common.cpp  Common.h  GitRevision.cpp
src/common/Collision/: VMapDefinitions.h
src/common/Cryptography/: OpenSSLCrypto.h
src/common/Debugging/: Errors.cpp
src/common/Utilities/: EventMap.cpp  EventProcessor.h  TaskScheduler.cpp  Util.cpp  Util.h
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.rc
src/server/authserver/Server/: AuthSession.cpp  AuthSession.h
src/server/database/: CMakeLists.txt
src/server/game/: AuctionHouseMgr.cpp  AuctionHouseMgr.h  CMakeLists.txt  Channel.cpp  Channel.h  CreatureTextMgr.cpp  CreatureTextMgr.h  Formulas.h  GameEventMgr.cpp  GameEventMgr.h  GridNotifiers.cpp  GridNotifiers.h  LogsDatabaseAccessor.cpp  LogsDatabaseAccessor.h  MiscHandler.cpp  Monitor.cpp  (+17 more)
(+484 files in other folders)
